<resources>
    <string name="app_name">Relay Touch</string>
    <string name="meeting_id">meeting id</string>
    <string name="passcode">passcode</string>
    <string name="preferences">Settings</string>
    <string name="advanced">Advanced</string>
    <string name="api_root">API Server</string>
    <string name="manual_api_root">API Server URL</string>
    <string name="endpoint_id">Endpoint</string>
    <string name="endpoint_id_desc_unpaired">unpaired</string>
    <string name="endpoint_id_hint">Provisioned in Relay</string>
    <string name="event_with_meeting">Blue Jeans meeting</string>
    <string name="event_with_primetime_attendee">Blue Jeans Primetime event: Attendee</string>
    <string name="event_with_primetime_panelist">Blue Jeans Primetime event: Presenter</string>
    <string name="event_without_meeting">Calendar event with no Blue Jeans meeting</string>
    <string name="join_by_meeting_id">Join by Meeting ID</string>
    <string name="no_meetings_scheduled">no scheduled meetings</string>
    <string name="scan">Scan</string>
    <string name="dial">Dial</string>
    <string name="help">Help</string>
    <string name="bluejeans">Blue Jeans</string>
    <string name="join">Join</string>
    <string name="private_meeting">Private Meeting</string>
    <string name="joining">Joining meeting…</string>
    <string name="scheduling_server_unavailable">"can't reach Blue Jeans Relay server"</string>
    <string name="loading_meetings">loading meetings…</string>
    <string name="date">date</string>
    <string name="none">none</string>
    <string name="time">time</string>
    <string name="organizer">organizer</string>
    <string name="meeting_joined">Meeting joined</string>
    <string name="disconnect">Hang up</string>
    <string name="join_failed">Failed to join meeting</string>
    <string name="help_suggestion_scheduling">you can schedule one-click meetings from your calendar. learn more »</string>
    <string name="keepInForeground">Keep app in foreground</string>
    <string name="username_storm">Relay username</string>
    <string name="password_storm">Relay password</string>
    <string name="waiting_for_connectivity">No Network Connection!</string>
    <string name="waiting_for_connectivity_help">Check that your network is configured.</string>
    <string name="bad_image">Invalid Image</string>
    <string name="bad_image_message_shape">Logo image must be no higher than its width. Please choose another image.</string>
    <string name="bad_image_message_too_small">Logo image is too small. Please choose a larger image (at least 160x40).</string>
    <string name="dismiss">Dismiss</string>
    <string name="alert_passcode_title">This Meeting is Protected by a Passcode</string>
    <string name="alert_passcode_bad_title">Bad Passcode</string>
    <string name="alert_passcode_get_passcode">"This meeting requires a passcode to start it now. If you don't have the passcode, you can join and wait for the moderator."</string>
    <string name="alert_passcode_get_good_passcode">The passcode entered was invalid.</string>
    <string name="alert_passcode_get_other_passcode">The passcode entered was valid, but the moderator passcode is required to start this meeting.</string>
    <string name="prompt_enter_passcode">Please enter your passcode.</string>
    <string name="join_without_passcode">"I Don't Have the Passcode"</string>
    <string name="join_without_passcode_action">Joins the meeting to wait for the moderator to start it.</string>
    <string name="join_with_passcode">I Have the Passcode</string>
    <string name="join_with_passcode_action">Prompts for the passcode to start the meeting now.</string>
    <string name="shrug">Dismiss</string>
    <string name="cancel">Cancel</string>
    <string name="user_facing_error_409902545">Relay server unavailable. This could be due to temporary network connectivity problems. ${causeMessage}</string>
    <string name="user_facing_error_218517336">"Incorrect Relay username or password.
Try changing these values in Settings."</string>
    <string name="user_facing_error_1065375591">Unknown error.</string>
    <string name="user_facing_error_1217481661">"No such Endpoint.
Try selecting a different Endpoint from Settings."</string>
    <string name="user_facing_error_1296998295">The Listener Service failed trying to handle the ${commandName} command.</string>
    <string name="user_facing_error_123834739">There was a problem communicating with the Blue Jeans Primetime service. Please try again.</string>
    <string name="user_facing_error_748396429">The Blue Jeans Primetime event is not live.</string>
    <string name="user_facing_error_38393928">The Blue Jeans Primetime event was not found.</string>
    <string name="user_facing_error_598238723">Because participation in this Blue Jeans Primetime event is restricted, you must join this event from your computer. Once you log in, you will have the option to pair this room system.</string>
    <string name="user_facing_error_208581637">The Listener Service is offline. If this error persists, please contact your IT administrator.</string>
    <string name="user_facing_error_1917844536">${remoteName} is configured incorrectly in Blue Jeans Relay.</string>
    <string name="user_facing_error_837158652">Unable to communicate with ${remoteName}, it may be offline or misconfigured.</string>
    <string name="user_facing_error_941644305">Please ask your IT administrator to update the Blue Jeans Relay Listener Service.</string>
    <string name="user_facing_error_1436062998">Unable to reach with ${remoteName}, it may be offline or misconfigured.</string>
    <string name="user_facing_error_1417554097">${remoteName} responded with an error.</string>
    <string name="user_facing_error_47328961">Please ask your IT administrator to update the Blue Jeans Relay Listener Service.</string>
    <string name="user_facing_error_2123224504">Please ask your IT administrator to update the Blue Jeans Relay Listener Service.</string>
    <string name="user_facing_error_1881171133">Please ask your IT administrator to configure a Listener Service for ${endpointName} in Blue Jeans Relay.</string>
    <string name="user_facing_error_72013363">Unable to communicate with Blue Jeans Relay Listener Service.</string>
    <string name="user_facing_error_2042734031">${remoteName} is misconfigured or it may have crashed.</string>
    <string name="user_facing_error_1331991805">Blue Jeans Relay Listener Service took too long to respond to ${commandName} command.</string>
    <string name="user_facing_error_594923066">${remoteName} took too long to respond, it might have gone offline or been configured incorrectly.</string>
    <string name="user_facing_error_1780355652">Please ask your IT administrator to configure the username and password for ${remoteName} in Blue Jeans Relay.</string>
    <string name="user_facing_error_424016482">Please ask your IT administrator to update the Blue Jeans Relay Listener Service.</string>
    <string name="user_facing_error_detail_message">Message</string>
    <string name="user_facing_error_detail_causeMessage">Cause</string>
    <string name="user_facing_error_detail_listenerServiceId">Listener Service ID</string>
    <string name="user_facing_error_detail_remoteAddress">Remote Address</string>
    <string name="user_facing_error_detail_remoteRequest">Remote Request</string>
    <string name="user_facing_error_detail_command">Command</string>
    <string name="user_facing_error_detail_remoteId">Remote ID</string>
    <string name="user_facing_error_detail_remoteName">Remote Name</string>
    <string name="user_facing_error_detail_remoteResponse">Remote Response</string>
    <string name="user_facing_error_detail_causes">Causes</string>
    <string name="user_facing_error_detail_commandName">Command</string>
    <string name="user_facing_error_detail_listenerServiceVersion">Listener Service Version</string>
    <string name="user_facing_error_detail_endpointName">Endpoint</string>
    <string name="user_facing_error_detail_entityId">Entity ID</string>
    <string name="user_facing_error_detail_entityClass">Entity Class</string>
    <string name="hanging_up_endpoint">Hanging up Endpoint…</string>
    <string name="bad_login">Incorrect Relay login or server</string>
    <string name="joining_primetime_title">Blue Jeans Primetime Event</string>
    <string name="joining_primetime_attendee_message">You are joining a Blue Jeans Primetime event as a view-only Attendee.</string>
    <string name="joining_primetime_panelist_message">You are joining a Blue Jeans Primetime event as a Presenter.</string>
    <string name="primetime_meeting_joined">In Blue Jeans Primetime Event</string>
    <string name="log_in">Log in</string>
    <string name="incorrect_username_or_password">Incorrect username or password</string>
    <string name="no_listener_service">No Listener Service</string>
    <string name="no_listener_service_description">"Without a Listener Service, this device won't be able to control your Endpoint.

Before continuing, set up a Listener Service at relay.bluejeans.com."</string>
    <string name="no_listener_service_retry">Done, I set up a Listener Service</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="calendar_setup_note">Note: use relay.bluejeans.com to set up calendar</string>
    <string name="ip_address">IP Address</string>
    <string name="control_protocol">Control Protocol</string>
    <string name="listener_service">Listener Service</string>
    <string name="name">Name</string>
    <string name="next">Next</string>
    <string name="choose_endpoint">Choose endpoint</string>
    <string name="invalid_ip_address_description">IP Address should look like 1.2.3.4</string>
    <string name="ControlProtocol.LIFESIZE_HTTP_ICON">Lifesize Icon</string>
    <string name="ControlProtocol.LIFESIZE_SSH">Lifesize Room/Express/Team</string>
    <string name="ControlProtocol.MESH">Relay Mesh</string>
    <string name="ControlProtocol.POLYCOM_HTTP_HDX">Polycom HDX/VSX</string>
    <string name="ControlProtocol.POLYCOM_HTTP_REALPRESENCE">Polycom RealPresence</string>
    <string name="ControlProtocol.TANDBERG_HTTP">Cisco/Tandberg</string>
    <string name="ControlProtocol.TELY_HTTP">Tely</string>
    <string name="ControlProtocol.CISCO_IX_SSH_SOAP">Cisco IX</string>
    <string name="use_existing">Choose Endpoint</string>
    <string name="create_new">Add New Endpoint</string>
    <string name="invalid_field">Invalid %1$s</string>
    <string name="field_required">You must provide the Endpoint %1$s.</string>
    <string name="something_happened">Something happened</string>
    <string name="failed_to_save_endpoint">Failed to save endpoint.</string>
    <string name="no_listener_service_again">"There are still 0 Listener Services provisioned in your Blue Jeans Relay enterprise.
Provision a Listener Service before tapping Done."</string>
    <string name="action_settings">Settings</string>
    <string name="test_call">Make a test call</string>
    <string name="finish">Finish</string>
    <string name="unpaired">unpaired</string>
    <string name="mute">Mute</string>
    <string name="unmute">Unmute</string>
    <string name="muting">Muting…</string>
    <string name="unmuting">Unmuting…</string>
    <string name="unable_to_mute">Unable to mute</string>
    <string name="unable_to_mute_description">Please ask your IT administrator to update the Blue Jeans Relay Listener Service.</string>
    <string name="no_endoint_selected">No Endoint selected</string>
    <string name="settings_password">Password protect app settings</string>
    <string name="set_password">Set password</string>
    <string name="set_password_hint">Enter a new password, or leave blank to disable settings password protection.</string>
</resources>