<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:id="@id/parent" android:paddingBottom="20.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent" android:fillViewport="true"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:focusableInTouchMode="true" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <ImageView android:id="@id/logo" android:layout_width="fill_parent" android:layout_height="200.0dip" android:layout_marginTop="30.0dip" android:src="@drawable/bluejeans_logotype_blue" android:layout_alignParentTop="true" android:layout_centerHorizontal="true" android:contentDescription="@string/bluejeans" />
        <EditText android:textSize="20.0sp" android:id="@id/username" android:layout_width="350.0dip" android:layout_height="wrap_content" android:hint="@string/username_storm" android:ems="10" android:layout_below="@id/logo" android:layout_centerHorizontal="true" android:inputType="textVisiblePassword" />
        <EditText android:textSize="20.0sp" android:id="@id/password" android:layout_width="350.0dip" android:layout_height="wrap_content" android:layout_marginTop="60.0dip" android:hint="@string/password_storm" android:ems="10" android:layout_below="@id/logo" android:layout_centerHorizontal="true" android:inputType="textPassword" android:imeActionLabel="@string/log_in" android:imeActionId="2" android:fontFamily="sans-serif" />
        <TextView android:textSize="13.0sp" android:textColor="@color/red" android:gravity="center_vertical" android:id="@id/errormessage" android:visibility="invisible" android:layout_width="wrap_content" android:layout_height="30.0dip" android:text="@string/incorrect_username_or_password" android:layout_below="@id/password" android:layout_centerHorizontal="true" />
        <ImageButton android:id="@id/submit" android:background="?android:selectableItemBackground" android:padding="20.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/right_arrow" android:layout_below="@id/errormessage" android:layout_centerHorizontal="true" android:contentDescription="@string/log_in" />
    </RelativeLayout>
</ScrollView>