<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:padding="15.0dip" android:focusableInTouchMode="true" android:descendantFocusability="beforeDescendants" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:id="@android:id/title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="8.0dip" android:text="@string/dial" android:layout_alignParentLeft="true" android:layout_alignParentTop="true" style="@style/fragment_title" />
    <EditText android:id="@id/meetingId" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="8.0dip" android:layout_marginRight="8.0dip" android:hint="@string/meeting_id" android:layout_below="@android:id/title" android:layout_alignLeft="@android:id/title" android:inputType="numberPassword" android:fontFamily="sans-serif" />
    <EditText android:id="@id/passcode" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="8.0dip" android:layout_marginTop="@dimen/magic" android:layout_marginRight="8.0dip" android:hint="@string/passcode" android:layout_below="@id/meetingId" android:inputType="numberPassword" android:imeActionLabel="Join" android:imeActionId="2" android:fontFamily="sans-serif" />
    <Button android:textSize="16.0sp" android:textStyle="bold" android:textColor="@android:color/white" android:id="@id/join" android:background="@drawable/button_dial_join" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="8.0dip" android:layout_marginTop="@dimen/magic" android:layout_marginRight="8.0dip" android:text="@string/join" android:layout_below="@id/passcode" />
</RelativeLayout>