<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:id="@id/parent" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:layout_gravity="center_horizontal" android:orientation="vertical" android:background="@android:color/white" android:paddingLeft="15.0dip" android:paddingTop="5.0dip" android:paddingRight="15.0dip" android:paddingBottom="15.0dip" android:layout_width="600.0dip" android:layout_height="wrap_content">
        <TableLayout android:id="@id/endpoint_editor" android:layout_width="fill_parent" android:layout_height="wrap_content" android:stretchColumns="1">
            <TableRow android:layout_width="wrap_content" android:layout_height="wrap_content" style="@style/endpointEditorTableRow">
                <TextView android:focusable="true" android:focusableInTouchMode="true" android:layout_width="200.0dip" android:layout_height="wrap_content" android:text="@string/name" style="@style/formLabel" />
                <EditText android:id="@id/name" android:layout_width="wrap_content" android:layout_height="wrap_content" android:inputType="textVisiblePassword|textCapWords" style="@style/formEditText" />
            </TableRow>
            <TableRow android:layout_width="wrap_content" android:layout_height="wrap_content" style="@style/endpointEditorTableRow">
                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/listener_service" style="@style/formLabel" />
                <Spinner android:id="@id/listenerService" android:layout_width="wrap_content" android:layout_height="wrap_content" />
            </TableRow>
            <TableRow android:layout_width="wrap_content" android:layout_height="wrap_content" style="@style/endpointEditorTableRow">
                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/control_protocol" style="@style/formLabel" />
                <Spinner android:id="@id/controlProtocol" android:layout_width="wrap_content" android:layout_height="wrap_content" />
            </TableRow>
            <TableRow android:layout_width="wrap_content" android:layout_height="wrap_content" style="@style/endpointEditorTableRow">
                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/ip_address" style="@style/formLabel" />
                <EditText android:id="@id/ipAddress" android:layout_width="wrap_content" android:layout_height="wrap_content" android:digits="0123456789." android:inputType="numberDecimal" style="@style/formEditText" />
            </TableRow>
            <TableRow android:layout_width="wrap_content" android:layout_height="wrap_content" style="@style/endpointEditorTableRow">
                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/username" style="@style/formLabel" />
                <EditText android:id="@id/username" android:layout_width="wrap_content" android:layout_height="wrap_content" android:inputType="textVisiblePassword" style="@style/formEditText" />
            </TableRow>
            <TableRow android:layout_width="wrap_content" android:layout_height="wrap_content" style="@style/endpointEditorTableRow">
                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/password" style="@style/formLabel" />
                <EditText android:id="@id/password" android:layout_width="wrap_content" android:layout_height="wrap_content" android:inputType="textPassword" style="@style/formEditText" />
            </TableRow>
        </TableLayout>
        <TextView android:textStyle="italic" android:layout_gravity="right" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/calendar_setup_note" android:fontFamily="sans-serif-light" />
    </LinearLayout>
</ScrollView>