<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="#0d000000" android:padding="25.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="18.0sp" android:ellipsize="end" android:id="@android:id/title" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/alert_passcode_title" android:maxLines="2" style="@style/meeting_title" />
    <TextView android:textSize="13.0sp" android:gravity="center" android:layout_gravity="center_horizontal" android:id="@id/alert_message" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="6.0dip" android:layout_marginBottom="6.0dip" android:text="@string/alert_passcode_get_passcode" />
    <LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:background="#0d000000" android:padding="0.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:baselineAligned="false" android:weightSum="2.0" style="?android:attr/buttonBarStyle">
        <LinearLayout android:orientation="vertical" android:background="#0d000000" android:layout_width="wrap_content" android:layout_height="fill_parent" style="?android:attr/buttonBarStyle">
            <Button android:textSize="13.0sp" android:textStyle="bold" android:textColor="#ff4d4d4d" android:layout_gravity="center_horizontal" android:id="@id/joinWithPasscodeButton" android:background="@drawable/button_dialog_join" android:paddingLeft="12.0dip" android:paddingRight="12.0dip" android:layout_width="wrap_content" android:layout_height="45.0dip" android:layout_margin="6.0dip" android:layout_marginTop="25.0dip" android:text="@string/join_with_passcode" android:drawableLeft="@drawable/meeting_icon_with_bluejeans" android:drawablePadding="12.0dip" style="?android:attr/buttonBarButtonStyle" />
            <TextView android:textSize="12.0sp" android:gravity="center" android:layout_gravity="center_horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/join_with_passcode_action" />
        </LinearLayout>
        <LinearLayout android:orientation="vertical" android:background="#0d000000" android:layout_width="wrap_content" android:layout_height="0.0dip" android:layout_weight="1.0" style="?android:attr/buttonBarStyle">
            <Button android:textSize="13.0sp" android:textStyle="bold" android:textColor="#ff4d4d4d" android:layout_gravity="center_horizontal" android:id="@id/joinWithoutPasscodeButton" android:background="@drawable/button_dialog_join" android:paddingLeft="12.0dip" android:paddingRight="12.0dip" android:layout_width="wrap_content" android:layout_height="45.0dip" android:layout_margin="6.0dip" android:layout_marginTop="25.0dip" android:text="@string/join_without_passcode" android:drawableLeft="@drawable/meeting_icon_with_bluejeans" android:drawablePadding="12.0dip" style="?android:attr/buttonBarButtonStyle" />
            <TextView android:textSize="12.0sp" android:gravity="center" android:layout_gravity="center_horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/join_without_passcode_action" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>