<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="#0d000000" android:padding="25.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="18.0sp" android:ellipsize="end" android:id="@android:id/title" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/joining_primetime_title" android:maxLines="2" style="@style/meeting_title" />
    <TextView android:textSize="13.0sp" android:gravity="center" android:layout_gravity="center_horizontal" android:id="@id/alert_message" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="6.0dip" android:layout_marginBottom="6.0dip" android:text="@string/joining_primetime_attendee_message" />
    <Button android:textSize="18.0sp" android:textStyle="bold" android:textColor="#ff4d4d4d" android:layout_gravity="center_horizontal" android:id="@id/join" android:background="@drawable/button_dialog_join" android:paddingLeft="19.0dip" android:paddingRight="27.0dip" android:layout_width="wrap_content" android:layout_height="87.0dip" android:layout_marginTop="25.0dip" android:text="@string/join" android:drawableLeft="@drawable/meeting_icon_with_bluejeans" android:drawablePadding="19.0dip" />
</LinearLayout>