<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="35.0sp" android:textColor="#ff545454" android:gravity="center_vertical" android:id="@android:id/text1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="100.0dip" android:text="@string/no_listener_service" android:drawableLeft="@drawable/cloud_warning" android:drawablePadding="30.0dip" android:layout_alignParentTop="true" android:layout_centerHorizontal="true" android:fontFamily="sans-serif-light" />
    <TextView android:textSize="24.0sp" android:textColor="@android:color/black" android:id="@android:id/text2" android:layout_width="456.0dip" android:layout_height="wrap_content" android:layout_marginTop="72.0dip" android:text="@string/no_listener_service_description" android:layout_below="@android:id/text1" android:layout_centerHorizontal="true" android:alpha="0.5" android:fontFamily="sans-serif-light" />
    <Button android:textSize="25.0sp" android:textColor="@color/blue_bright" android:id="@android:id/button1" android:background="?android:selectableItemBackground" android:paddingLeft="17.0dip" android:paddingRight="17.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="25.0dip" android:layout_marginBottom="25.0dip" android:text="@string/no_listener_service_retry" android:layout_alignParentRight="true" android:layout_alignParentBottom="true" />
</RelativeLayout>