<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:id="@id/parent" android:paddingLeft="70.0dip" android:paddingTop="70.0dip" android:paddingRight="70.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_weight="1.0">
        <TextView android:id="@id/textView1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginBottom="5.0dip" android:text="@string/meeting_id" style="@style/fragment_title" />
        <EditText android:id="@id/meetingId" android:nextFocusDown="@id/passcode" android:layout_width="fill_parent" android:layout_height="fill_parent" android:ems="10" android:inputType="numberPassword" android:contentDescription="@string/meeting_id" android:fontFamily="sans-serif" />
    </LinearLayout>
    <LinearLayout android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/magic" android:layout_marginRight="@dimen/magic" android:layout_weight="1.0">
        <TextView android:id="@id/textView2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginBottom="5.0dip" android:text="@string/passcode" style="@style/fragment_title" />
        <EditText android:id="@id/passcode" android:layout_width="fill_parent" android:layout_height="fill_parent" android:ems="10" android:inputType="numberPassword" android:imeActionLabel="Join" android:imeActionId="2" android:contentDescription="@string/passcode" android:fontFamily="sans-serif" />
    </LinearLayout>
    <Button android:textSize="23.0sp" android:textStyle="bold" android:textColor="@android:color/white" android:id="@id/join" android:background="@drawable/button_dial_join" android:layout_width="75.0dip" android:layout_height="fill_parent" android:layout_marginLeft="@dimen/magic" android:text="@string/join" android:layout_weight="1.0" />
    <Button android:textSize="23.0sp" android:textStyle="bold" android:textColor="@android:color/white" android:id="@id/disconnect" android:background="@drawable/button_dial_join" android:layout_width="75.0dip" android:layout_height="fill_parent" android:layout_marginLeft="@dimen/magic" android:text="@string/disconnect" android:layout_weight="1.0" />
</LinearLayout>