<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:background="?android:activatedBackgroundIndicator" android:paddingRight="24.0dip" android:layout_width="fill_parent" android:layout_height="100.0dip"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textAppearance="?android:textAppearanceListItem" android:textSize="42.0sp" android:ellipsize="end" android:gravity="bottom" android:id="@android:id/text1" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="118.0dip" android:hint="Meeting" android:maxLines="1" android:layout_toLeftOf="@id/time" android:layout_centerVertical="true" style="@style/meeting_title" />
    <TextView android:textSize="31.0sp" android:textStyle="italic" android:textColor="#66000000" android:gravity="bottom|center|right" android:id="@id/time" android:paddingRight="8.0dip" android:paddingBottom="4.0dip" android:layout_width="140.0dip" android:layout_height="wrap_content" android:layout_marginTop="33.0dip" android:hint="12:00 AM " android:layout_alignParentRight="true" android:fontFamily="sans-serif-condensed" />
    <ImageButton android:id="@id/icon_meeting" android:background="?android:selectableItemBackground" android:layout_width="wrap_content" android:layout_height="100.0dip" android:src="@drawable/meeting_icon_with_bluejeans" android:layout_alignParentLeft="true" android:layout_alignParentTop="true" android:contentDescription="@string/event_with_meeting" style="@style/meetingIcon" />
    <ImageButton android:id="@id/icon_primetime_attendee" android:background="?android:selectableItemBackground" android:layout_width="wrap_content" android:layout_height="100.0dip" android:src="@drawable/meeting_icon_with_primetime_attendee" android:layout_alignParentLeft="true" android:layout_alignParentTop="true" android:contentDescription="@string/event_with_primetime_attendee" style="@style/meetingIcon" />
    <ImageButton android:id="@id/icon_primetime_panelist" android:background="?android:selectableItemBackground" android:layout_width="wrap_content" android:layout_height="100.0dip" android:src="@drawable/meeting_icon_with_primetime_panelist" android:layout_alignParentLeft="true" android:layout_alignParentTop="true" android:contentDescription="@string/event_with_primetime_panelist" style="@style/meetingIcon" />
    <ImageView android:id="@id/icon_nomeeting" android:layout_width="wrap_content" android:layout_height="100.0dip" android:src="@drawable/meeting_icon_without_bluejeans" android:layout_alignParentLeft="true" android:layout_alignParentTop="true" android:contentDescription="@string/event_without_meeting" style="@style/meetingIcon" />
</RelativeLayout>